nuon/cf/vpc-stack.yaml
Description: Deploys a VPC w/ 3 public subnets (one per az), 3 private subnets (one per az), a Nat gateway, and an internet gateway. The subnets are tagged for use by EKS (alb ingress controller). Also deploys an RDS Subnet for use by RDS resources.

Parameters:
  ClusterName:
    Description: The name for the EKS Cluster that will be deployed on this VPC.
    Type: String

  NuonInstallID:
    Description: The Nuon Install ID; prefixed to resource names.
    Type: String

  NuonOrgID:
    Description: The Nuon Org ID. Used in tags.
    Type: String

  NuonAppID:
    Description: The Nuon Install ID. Used in tags.
    Type: String

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC.
    Type: String
    Default: 10.128.0.0/16

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.128.0.0/26

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.128.0.64/26

  PublicSubnet3CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the third Availability Zone
    Type: String
    Default: 10.128.0.128/26

  # a dedicated private subnet for the runner
  RunnerSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the dedicated private subnet for the runner.
    Type: String
    Default: 10.128.128.0/24

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.128.130.0/24

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.128.132.0/24

  PrivateSubnet3CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the third Availability Zone
    Type: String
    Default: 10.128.134.0/24

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref NuonInstallID
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref NuonInstallID
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-public-subnet-az1
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID
        - Key: "kubernetes.io/role/elb"
          Value: 1
        - Key: "network.nuon.co/domain"
          Value: "public"
        - Key: "visibility"
          Value: "public"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-public-subnet-az2
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID
        - Key: "kubernetes.io/role/elb"
          Value: 1
        - Key: "network.nuon.co/domain"
          Value: "public"
        - Key: "visibility"
          Value: "public"

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet3CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-public-subnet-az3
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID
        - Key: "kubernetes.io/role/elb"
          Value: 1
        - Key: "network.nuon.co/domain"
          Value: "public"
        - Key: "visibility"
          Value: "public"

  RunnerSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref RunnerSubnetCIDR
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-private-runner-subnet-az1
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID
        - Key: "network.nuon.co/domain"
          Value: "runner"
        - Key: "visibility"
          Value: "private"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-private-subnet-az1
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID
        - Key: "kubernetes.io/role/internal-elb"
          Value: 1
        - Key: "network.nuon.co/domain"
          Value: "internal"
        - Key: "visibility"
          Value: "private"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-private-subnet-az2
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID
        - Key: "kubernetes.io/role/internal-elb"
          Value: 1
        - Key: "network.nuon.co/domain"
          Value: "internal"
        - Key: "visibility"
          Value: "private"

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet3CIDR
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-private-subnet-az3
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID
        - Key: "kubernetes.io/role/internal-elb"
          Value: 1
        - Key: "network.nuon.co/domain"
          Value: "internal"
        - Key: "visibility"
          Value: "private"

  # NAT Gateway
  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: "Name"
          Value: !Ref NuonInstallID
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID

  # Route Tables: Public
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-public
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3

  # Route Tables: Private
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-private
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID

  DefaultPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  RunnerSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref RunnerSubnet

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet3

  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "RDS Subnet Group"
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3
      Tags:
        - Key: Name
          Value: !Sub ${NuonInstallID}-rds-subnet-group
        - Key: "install.nuon.co/id"
          Value: !Ref NuonInstallID
        - Key: "org.nuon.co/id"
          Value: !Ref NuonOrgID
        - Key: "app.nuon.co/id"
          Value: !Ref NuonAppID

Outputs:
  VPC:
    Description: The VPC.
    Value: !Ref VPC

  PublicSubnets:
    Description: A list of the public subnets.
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2, !Ref PublicSubnet3 ]]

  PrivateSubnets:
    Description: A list of the private subnets.
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2, !Ref PrivateSubnet3 ]]

  RunnerSubnet:
    Description: The dedicated private subnet for the runner.
    Value: !Ref RunnerSubnet

  RDSSubnetGroup:
    Description: The RDS Subnet Group.
    Value: !Ref RDSSubnetGroup
